--- a/mountain.html
+++ b/mountain.html
@@ -14,10 +14,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
-    <script
-      src="https://kit.fontawesome.com/1883e88f00.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/1883e88f00.js" crossorigin="anonymous"></script>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -51,10 +49,46 @@
       </div>
     </header>
 
-    <h1 class="text-center">mountain</h1>
+    <h1 class="text-center">Mountain</h1>
 
-
-    <footer class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="images/HELANSHAN.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-6">
+          <img src="images/XIAHE.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="images/JACKESON PEAKS.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/YULONG.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/KEPLER RANGE.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="images/mountains 1.png" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/mountains 2.png" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/mountains 3.png" class="img-fluid p-2 mt-5 " />
+        </div>
+      </div>
+    </div>
+    
+<footer class="footer">
         <div class="container-fluid foot">
             <div class="row">
                 <div class="col-sm-4">
