updated images - fern / plant

--- a/fern.html
+++ b/fern.html
@@ -99,6 +99,23 @@
 
     <div class="container">
       <div class="row">
+        <div class="col-sm-3 mb-3">
+          <img src="images/FERN 6.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3 mb-3">
+          <img src="images/FERN BRAKEN.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3 mb-3">
+          <img src="images/waterfallfern.png" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3 mb-3">
+          <img src="images/lakes fern.png" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
         <div class="col-sm-4 mb-3">
           <img
             src="images/THE FOREST FLOOR I.jpg"
