--- a/plant.html
+++ b/plant.html
@@ -91,10 +91,25 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 mb-3">
+        <div class="col-sm-4 mb-3">
           <img src="images/SCANDI LEAF.png" class="img-fluid p-2 mt-5" />
         </div>
-      
+        <div class="col-sm-4 mb-3">
+          <img src="images/gold ginkgo 1.png" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4 mb-3">
+          <img src="images/gold ginkgo 2.png" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 mb-3">
+          <img src="images/iris.png" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-6 mb-3">
+          <img src="images/iris 2.png" class="img-fluid p-2 mt-5" />
+        </div>
       </div>
     </div>
 
