reordered nav menu

--- a/bird.html
+++ b/bird.html
@@ -40,10 +40,10 @@
             <a href="/plant.html">plant</a>
           </li>
           <li>
-            <a href="/mountain.html">mountain</a>
+            <a href="/building.html">building</a>
           </li>
           <li>
-            <a href="/building.html">building</a>
+            <a href="/mountain.html">magpie</a>
           </li>
         </ul>
       </div>
