--- a/mountain.html
+++ b/mountain.html
@@ -40,16 +40,16 @@
             <a href="/plant.html">plant</a>
           </li>
           <li>
-            <a href="/mountain.html">mountain</a>
+            <a href="/building.html">building</a>
           </li>
           <li>
-            <a href="/building.html">building</a>
+            <a href="/mountain.html">magpie</a>
           </li>
         </ul>
       </div>
     </header>
 
-    <h1 class="text-center">Mountain</h1>
+    <h1 class="text-center">Magpie</h1>
 
     <div class="container">
       <div class="row">
