Quick placeholder made

--- a/soon.html
+++ b/soon.html
@@ -19,12 +19,24 @@
   </head>
   <body>
 
-    <div class="landing text-center mt-5">
-      <a href="/soon.html">
-      咯
-      <br/>
-      噔
-      </a>
-    </div>
-    
+   <h1 class="text-center">COMING SOON..</h1>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
 </html>
