possible fix for text align index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
 
-    <div class="landing text-center mt-5">
+    <div class="landing mt-5">
       <a href="/soon.html">
       咯
       <br/>
