--- a/fern.html
+++ b/fern.html
@@ -42,7 +42,7 @@
             <a href="/building.html">building</a>
           </li>
           <li>
-            <a href="/mountain.html">magpie</a>
+            <a href="/mountain.html">misc</a>
           </li>
         </ul>
       </div>
