--- a/mountain.html
+++ b/mountain.html
@@ -43,13 +43,13 @@
             <a href="/building.html">building</a>
           </li>
           <li>
-            <a href="/mountain.html">magpie</a>
+            <a href="/mountain.html">misc</a>
           </li>
         </ul>
       </div>
     </header>
 
-    <h1 class="text-center">Magpie</h1>
+    <h1 class="text-center">misc</h1>
 
     <div class="container">
       <div class="row">
