--- a/bird.html
+++ b/bird.html
@@ -43,7 +43,7 @@
             <a href="/building.html">building</a>
           </li>
           <li>
-            <a href="/mountain.html">magpie</a>
+            <a href="/mountain.html">misc</a>
           </li>
         </ul>
       </div>
