--- a/plant.html
+++ b/plant.html
@@ -45,7 +45,7 @@
             <a href="/building.html">building</a>
           </li>
           <li>
-            <a href="/mountain.html">magpie</a>
+            <a href="/mountain.html">misc</a>
           </li>
         </ul>
       </div>
