--- a/home.html
+++ b/home.html
@@ -96,6 +96,9 @@
         </div>
       </div>
     </div>
+    <div class="inTouch">
+      <a href= "mailto:erc.ink.drawing@gmail.com">click here </a>to get in touch
+    </div>
 <footer class="footer">
         <div class="container-fluid foot">
             <div class="row">
