--- a/fern.html
+++ b/fern.html
@@ -51,14 +51,28 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-4 mb-3">
-          <img src="images/GULLY FERN1.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/gullyFern.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/KIOKIO.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/kioKio.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/FERN 18.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/bracken1.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="images/fern5.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/huruHuru.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/fern19.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -66,71 +80,71 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/BIGFERN.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/bigFern.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/FERN 19.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern6.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/FERN 16.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern16.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/FERN 25.jpg" class="img-fluid p-2 mt-5" />
+          <img src="images/fern25.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-3 mb-3">
-          <img src="images/FERN 15.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-3">
+          <img src="images/fern15.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-3 mb-3">
-          <img src="images/FERN 20.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-3">
+          <img src="images/fern20.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-3 mb-3">
-          <img src="images/FERN 27.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-3">
+          <img src="images/fern27.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-3 mb-3">
-          <img src="images/FERN 8.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-3">
+          <img src="images/fern8.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+
+     <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="images/maidenFern.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/brackenFern.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/waterFern.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/lakesFern.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-3 mb-3">
-          <img src="images/maiden.png" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-3 mb-3">
-          <img src="images/FERN BRAKEN.jpg" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-3 mb-3">
-          <img src="images/waterfallfern.png" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-3 mb-3">
-          <img src="images/lakes fern.png" class="img-fluid p-2 mt-5" />
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4 mb-3">
+        <div class="col-sm-4">
           <img
-            src="images/THE FOREST FLOOR I.jpg"
+            src="images/forestFloor1.jpg"
             class="img-fluid p-2 mt-5 border"
           />
         </div>
-        <div class="col-sm-4 mb-3">
+        <div class="col-sm-4">
           <img
-            src="images/THE FOREST FLOOR 2.jpg"
+            src="images/forestFloor2.jpg"
             class="img-fluid p-2 mt-5  border"
           />
         </div>
-        <div class="col-sm-4 mb-3">
+        <div class="col-sm-4">
           <img
-            src="images/THE FOREST FLOOR III.jpg"
+            src="images/forestFloor3.jpg"
             class="img-fluid p-2 mt-5  border"
           />
         </div>
