--- a/bird.html
+++ b/bird.html
@@ -54,70 +54,70 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/KIWI-01.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/kiwi1.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/Kororo-01.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/kororo.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/Kookaburra.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/kookaburra.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/shag-01.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/shag.jpg" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/yellowhead.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/yellowHead.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
           <img
-            src="images/whitehead-01.png"
+            src="images/whiteHead.jpg"
             class="img-fluid p-2 mt-5 "
           />
         </div>
         <div class="col-sm-3">
-          <img src="images/tomtit.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/tomTit.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/kiwi3-01.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/kiwi2.jpg" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/kea-01.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/kea.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
           <img
-            src="images/kingfisher-01.png"
+            src="images/kingfisher.jpg"
             class="img-fluid p-2 mt-5 "
           />
         </div>
         <div class="col-sm-3">
-          <img src="images/kiwi2-01.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/kiwi3.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/hihi.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/hihi.jpg" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/silvereye.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/silvereye.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/pukeko.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/pukeko.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/robin.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/robin.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-3">
-          <img src="images/fantail-01.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/fantail.jpg" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
