plant images update

--- a/plant.html
+++ b/plant.html
@@ -55,60 +55,101 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-4 mb-3">
-          <img src="images/FLOWERS.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/poppies.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/WHITE FLOWERS.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/fireFollowers.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/POPPY.png" class="img-fluid p-2 mt-5" />
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4 mb-3">
-          <img src="images/LOEWE SWEET PEA.jpg" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/GINKGO-01.png" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/LOEWE LIQUORICE.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/whiteFlowers.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 mb-3">
-          <img src="images/GINKGO.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/scandiLeaf.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-6 mb-3">
-          <img src="images/BAMBOO.jpg" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/ginkgoAutumn.jpg" class="img-fluid p-2 mt-5" />
         </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4 mb-3">
-          <img src="images/SCANDI LEAF.png" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/gold ginkgo 1.png" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/gold ginkgo 2.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/scandiLeaf2.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 mb-3">
-          <img src="images/iris.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/bambooTrip.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-6 mb-3">
-          <img src="images/iris 2.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/ginkgoTrip.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/fernTrip.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+   <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="images/blackPoppy.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/hellebore.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/carnationsPot.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/blackDaffs.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="images/goldenGinkgo.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/loeweLicorice.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/loeweSweetPea.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="images/zebraPrimroses.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/iris1.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/zebraPrimrose.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/sweetPea.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="images/carnations.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/carnations2.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/dwarfIris.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-3">
+          <img src="images/dwarfIrises.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
