buildings images update

--- a/building.html
+++ b/building.html
@@ -55,56 +55,42 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-4 mb-3">
-          <img src="images/suffolk.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/suffolk.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/royal well.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/royalWell.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/montpellier.png" class="img-fluid p-2 mt-5" />
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-3">
-          <img src="images/avalon.png" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-3">
-          <img src="images/inle.png" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-3">
-          <img src="images/yinchuan-home.png" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-3">
-          <img src="images/jaisalmer.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/montpellier.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-4 mb-3">
-          <img src="images/gamcheon.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/gamcheon.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/kirtipur.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/kirtipur.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-4 mb-3">
-          <img src="images/jodpur.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/jodhpur.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 mb-3">
-          <img src="images/matsumotolg.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4 mb-3">
+          <img src="images/matsumoto.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-6 mb-3">
-          <img src="images/himeji.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4 mb-3">
+          <img src="images/himeji.jpg" class="img-fluid p-2 mt-5" />
+        </div>
+        <div class="col-sm-4 mb-3">
+          <img src="images/avalon.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -112,38 +98,30 @@
      <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/hohot.png" class="img-fluid p-2 mt-5" />
+          <img src="images/hohot.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/pinkhouse.png" class="img-fluid p-2 mt-5" />
+          <img src="images/pinkHouse.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/church.png" class="img-fluid p-2 mt-5" />
+          <img src="images/church.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/from the window.png" class="img-fluid p-2 mt-5" />
+          <img src="images/fromTheWindow.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 mb-3">
-          <img src="images/golden-2.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/toshDarvoza.jpg" class="img-fluid p-2 mt-5" />
         </div>
-        <div class="col-sm-6 mb-3">
-          <img src="images/golden-1.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/yongNing.jpg" class="img-fluid p-2 mt-5" />
         </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6 mb-3">
-          <img src="images/lewes.png" class="img-fluid p-2 mt-5" />
-        </div>
-        <div class="col-sm-6 mb-3">
-          <img src="images/lewes castle.png" class="img-fluid p-2 mt-5" />
+        <div class="col-sm-4">
+          <img src="images/fez.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
@@ -151,34 +129,34 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <img src="images/taki-sarrafon.png" class="img-fluid p-2 mt-5" />
+          <img src="images/takiSarrafon.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/ulugbek.png" class="img-fluid p-2 mt-5" />
+          <img src="images/ulugbek.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/bibi-khanym.png" class="img-fluid p-2 mt-5" />
+          <img src="images/bibiKhanym.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-3">
-          <img src="images/bishkek.png" class="img-fluid p-2 mt-5" />
+          <img src="images/bishkek.jpg" class="img-fluid p-2 mt-5" />
         </div> 
       </div>
     </div>
+
      <div class="container">
       <div class="row">
         <div class="col-sm-4 mb-3">
-          <img src="images/charminar.png" class="img-fluid p-2 mt-5" />
+          <img src="images/charMinar.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-4 mb-3">
-          <img src="images/templeofheaven.png" class="img-fluid p-2 mt-5" />
+          <img src="images/templeOfHeaven.jpg" class="img-fluid p-2 mt-5" />
         </div>
         <div class="col-sm-4 mb-3">
-          <img src="images/chorsu-bazaar.png" class="img-fluid p-2 mt-5" />
+          <img src="images/chorsuBazaar.jpg" class="img-fluid p-2 mt-5" />
         </div>
       </div>
     </div>
     
-
     <footer class="footer">
         <div class="container-fluid foot">
             <div class="row">
