Misc image update

--- a/mountain.html
+++ b/mountain.html
@@ -53,34 +53,82 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
-          <img src="images/HELANSHAN.jpg" class="img-fluid p-2 mt-5 " />
+        <div class="col-sm-4">
+          <img src="images/sff1.jpg" class="img-fluid p-2 mt-5 " />
         </div>
-        <div class="col-sm-6">
-          <img src="images/XIAHE.jpg" class="img-fluid p-2 mt-5 " />
+        <div class="col-sm-4">
+          <img src="images/sff2.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/sff3.jpg" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
+
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/JACKESON PEAKS.jpg" class="img-fluid p-2 mt-5 " />
+          <img src="images/xiaHe.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-6">
-          <img src="images/KEPLER RANGE.jpg" class="img-fluid p-2 mt-5 " />
+          <img src="images/heLanShan.jpg" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="images/inLe.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/ningMengGan.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/banaue.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+      </div>
+    </div>
+
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/mountains 1.png" class="img-fluid p-2 mt-5 " />
+          <img src="images/lion1.jpg" class="img-fluid p-2 mt-5 " />
         </div>
         <div class="col-sm-6">
-          <img src="images/YULONG.jpg" class="img-fluid p-2 mt-5 " />
+          <img src="images/lion2.jpg" class="img-fluid p-2 mt-5 " />
         </div>
       </div>
     </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="images/jacksonPeaks.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/mountains1.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/keplerRange.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="images/yuLong.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/fishTail.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+        <div class="col-sm-4">
+          <img src="images/goldenHimalaya.jpg" class="img-fluid p-2 mt-5 " />
+        </div>
+      </div>
+    </div>
+
     
 <footer class="footer">
         <div class="container-fluid foot">
