--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/styles/style.css" />
     <script src="https://kit.fontawesome.com/1883e88f00.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <title>ERCINK</title>
+    <title>home</title>
   </head>
   <body>
     <header>
@@ -87,6 +87,6 @@
             </div>
         </div>
     </footer>
-  </body>
+  </body> 
     
 </html>
