--- a/mountain.html
+++ b/mountain.html
@@ -21,7 +21,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <title>ERCINK</title>
+    <title>misc</title>
   </head>
   <body>
     <header>
