edit file directory

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
             <a href="/home.html">home</a>
           </li>
           <li>
-            <a href="/fern.html">fern</a>
+            <a href="fern/index.html">fern</a>
           </li>
           <li>
             <a href="/bird.html">bird</a>
